[package]
name = "mackerel_plugin_uptime"
version = "0.2.0"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Uptime plugin for Mackerel"
repository = "https://github.com/itchyny/mackerel-plugin-uptime"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]
edition = "2021"

[dependencies]
mackerel_plugin = "0.2.6"
uptime_lib = "0.3.0"

[[bin]]
name = "mackerel-plugin-uptime"
path = "bin/main.rs"
